# birdbot-dockerized

./: .env.example  README.md  docker-compose.yml
api/: Dockerfile  index.ts  package.json
api/middleware/: auth.ts
api/prisma/: schema.prisma
api/routes/: addPlayer.route.ts  addWord.route.ts
api/schemas/: addPlayer.schema.ts  addWord.schema.ts
bot/: Cargo.toml  Dockerfile
bot/src/: bot.rs  main.rs  room.rs  socket.rs  utils.rs
bot/src/handle_socketio_message/: common.rs  mod.rs  parse.rs
bot/src/handle_socketio_message/game/: find_word.rs  handle_game_message.rs  handle_socketio_game_message.rs  mod.rs
bot/src/handle_socketio_message/room/: handle_socketio_room_message.rs  mod.rs
bot/src/resources/: bot_resources.rs  dictionary.rs  mod.rs
website/: Dockerfile  package-lock.json  package.json
website/src/app/: layout.tsx
