[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rand = "0.9.0"
reqwest = "0.12.12"
